--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,7 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 ")
 set(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -stdlib=libc++")
-
-
-
-
-
-
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS}  -m64 -O2")
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -m64 -O2")
 if (CMAKE_HOST_APPLE)
     add_definitions(-DOS_MACOSX)
@@ -20,6 +13,15 @@ elseif (CMAKE_HOST_UNIX)
 else (CMAKE_HOST_APPLE)
     message(FATAL_ERROR "Platform not supported")
 endif (CMAKE_HOST_APPLE)
+
+if (CMAKE_HOST_APPLE)
+set(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -stdlib=libc++")
+elseif (CMAKE_HOST_UNIX)
+    set(CMAKE_CXX_FLAGS " ${CMAKE_CXX_FLAGS} -stdlib=libstdc++")
+else (CMAKE_HOST_APPLE)
+    message(FATAL_ERROR "Platform not supported")
+endif (CMAKE_HOST_APPLE)
+
 
 
 MESSAGE("++++++++++++++Start Build+++++++++++++++++")
